--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="carousel-item">
           <img src="assets/img/hero_3.jpg" alt="">
           <div class="carousel-container">
-            <h2>Providing Fresh Produce Every Single Day</h2>
+            <h2>Welcome To AI&DS[21ND1A5431] </h2>
             <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
           </div>
         </div><!-- End Carousel Item -->
